000684  2024-02-14    Mansholt — Mansholt Letter

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -681,6 +681,11 @@
 
 
 <tr>
+<td class='auteur' valign="top" rowspan="1">Mansholt, Sicco</td>
+<td class='livre'><a href='livres/000684/index.html'>Mansholt Letter</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign="top" rowspan="2">Marinetti, Filippo Tommaso</td>
 <td class='livre'><a href='livres/000402/index.html'>Mafarka le futuriste</a></td>
 </tr>
@@ -690,7 +695,7 @@
 
 
 <tr>
-<td class='auteur' valign='top'>Margueritte, Paul</td>
+<td class='auteur' rowspan='1' valign='top'>Margueritte, Paul</td>
 <td class='livre'><a href='livres/000415/index.html'>Simple histoire</a></td>
 </tr>
 
