000685  2024-02-17    Ward, Dubos — Only One Earth

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -1083,6 +1083,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Ward, Barbara, et Dubos, René</td>
+<td class='livre'><a href='livres/000685/index.html'>Only One Earth</a></td>
+</tr>
+
+<tr>
 <td class='auteur' rowspan="3" valign="top">Zola, Émile</td>
 <td class='livre'><a href='livres/c00003/index.html'>Les Rougon-Macquart</a></td>
 </tr>
