000686  2024-02-22    Kapp — The Social Costs of Business Enterprise

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -566,6 +566,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign="top" rowspan="1">Kapp, K. William</td>
+<td class='livre'><a href='livres/000686/index.html'>The Social Costs of Business Enterprise</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign="top" rowspan="2">Kock, Paul de</td>
 <td class='livre'><a href='livres/000443/index.html'>L’enfant de ma femme</a></td>
 </tr>
