000687  2024-02-29    The Ecologist — A Blueprint for Survival

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -36,7 +36,7 @@
 
 <h3><a name="catalogue">Catalogue</a></h3>
 
-<p>Le site <a href='http://noslivres.net'>noslivres.net</a> intègre le catalogue ÉFÉLÉ ainsi que les catalogues d’autres éditeurs, et permet des tris et recherches.</p>
+<p>Le site <a href='http://noslivres.net'>noslivres.net</a> intègre les livres en français du catalogue ÉFÉLÉ ainsi que les catalogues d’autres éditeurs, et permet des tris et recherches.</p>
 
 
 <table style='borders:0;' cellpadding='2'>
@@ -117,27 +117,21 @@
 <td class='auteur' rowspan='7' valign='top'>Bachelin, Henri</td>
 <td class='livre'><a href="livres/000297/index.html">Le bélier, la brebis et le mouton</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href="livres/000295/index.html">La guerre sur le hameau</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href="livres/000288/index.html">Le serviteur</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href="livres/000310/index.html">Le village</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href="livres/000393/index.html">Les rustres</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href="livres/000377/index.html">Pas-comme-les-autres</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href="livres/000296/index.html">Robes noires</a></td>
 </tr>
@@ -156,27 +150,21 @@
 <td class='auteur' rowspan='7' valign='top'>Barbara, Charles</td>
 <td class='livre'><a href="livres/c00009/index.html">Histoires émouvantes</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href="livres/000291/index.html">L’assassinat du Pont-Rouge</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href="livres/000285/index.html">Les orages de la vie</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href="livres/000279/index.html">L’ombre du mancenillier</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href="livres/000520/index.html">Mademoiselle de Sainte-Luce</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href="livres/c00010/index.html">Mes petites-maisons</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href="livres/000280/index.html">Ronde fantastique</a></td>
 </tr>
@@ -185,27 +173,21 @@
 <td class='auteur' rowspan='7' valign="top">Barbusse, Henri</td>
 <td class='livre'><a href='livres/000397/index.html'>Ce qui fut sera</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000180/index.html'>J’accuse !</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000112/index.html'>Le feu</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000170/index.html'>Lettres de Henri Barbusse à sa femme, 1914-1917</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000287/index.html'>L’illusion</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000299/index.html'>Nous autres...</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000634/index.html'>Russie</a></td>
 </tr>
@@ -215,7 +197,6 @@
 <td class='auteur' rowspan="2" valign="top">Baudelaire, Charles</td>
 <td class='livre'><a href='livres/000154/index.html'>Les fleurs du mal (1857)</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000155/index.html'>Les fleurs du mal (1861)</a></td>
 </tr>
@@ -224,11 +205,9 @@
 <td class='auteur' rowspan="3" valign="top">Bernard, Tristan</td>
 <td class='livre'><a href='livres/000544/index.html'>Citoyens, animaux, phénomènes</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000545/index.html'>Le taxi fantôme</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000543/index.html'>Les Coteaux du Médoc</a></td>
 </tr>
@@ -237,26 +216,24 @@
 <td class='auteur' rowspan="2" valign="top">Bloy, Léon</td>
 <td class='livre'><a href='livres/000207/index.html'>Exégèse des Lieux Communs</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000213/index.html'>Exégèse des Lieux Communs (nouvelle série)</a></td>
 </tr>
 
 <tr>
 <td class='auteur' rowspan="1" valign="top">Bookchin, Murray</td>
-<td class='livre'><a href='livres/000682/index.html'>Our Synthetic Environment</a></td>
+<td class='livre'><a href='livres/000682/index.html'>Our Synthetic Environment</a> †</td>
 </tr>
 
 <tr>
 <td class='auteur' rowspan="1" valign="top">Borlaug, Norman</td>
-<td class='livre'><a href='livres/000683/index.html'>Mankind and Civilization at Another Crossroad</a></td>
+<td class='livre'><a href='livres/000683/index.html'>Mankind and Civilization at Another Crossroad</a> †</td>
 </tr>
 
 <tr>
 <td class='auteur' rowspan="2" valign="top">Bourgeois, Léon</td>
 <td class='livre'><a href='livres/000372/index.html'>Les applications de la solidarité sociale</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000150/index.html'>Solidarité</a></td>
 </tr>
@@ -391,11 +368,9 @@
 <td class='auteur' valign="top" rowspan='3'>Estaunié, Édouard</td>
 <td class='livre'><a href='livres/000292/index.html'>L’épave</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000517/index.html'>Le ferment</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000340/index.html'>Un simple</a></td>
 </tr>
@@ -424,7 +399,6 @@
 <td class='auteur' valign='top' rowspan='2'>Franc-Nohain</td>
 <td class='livre'><a href='livres/000625/index.html'>Les inattentions et sollicitudes</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000610/index.html'>Les salles d’attente</a></td>
 </tr>
@@ -460,19 +434,15 @@
 <td class='auteur' valign="top" rowspan="4">Gilbert de Voisins, Auguste</td>
 <td class='livre'><a href='livres/000619/index.html'>Écrit en Chine</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000371/index.html'>La petite angoisse</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000417/index.html'>Les jardins, le faune et le poète</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000462/index.html'>Les moments perdus de John Shag</a></td>
 </tr>
-
 
 <tr>
 <td class='auteur' valign='top'>Gobineau, Arthur</td>
@@ -493,11 +463,9 @@
 <td class='auteur' valign="top" rowspan='3'>Hugo, Victor</td>
 <td class='livre'><a href='livres/c00013/index.html'>Choses vues, édition Ollendorf/Imprimerie nationale</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/c00012/index.html'>Œuvres complètes, actes et paroles, édition Hetzel-Quantin</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/c00005/index.html'>Œuvres complètes, romans, édition Hetzel-Quantin</a></td>
 </tr>
@@ -506,19 +474,15 @@
 <td class='auteur' valign="top" rowspan="5">Huysmans, Joris-Karl </td>
 <td class='livre'><a href='livres/000383/index.html'>A vau-l’eau</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000390/index.html'>En ménage</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000389/index.html'>En rade</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000395/index.html'>Marthe</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000672/index.html'>Un dilemne</a></td>
 </tr>
@@ -527,27 +491,21 @@
 <td class='auteur' valign="top" rowspan='8'>Jaloux, Edmond</td>
 <td class='livre'><a href='livres/000632/index.html'>Au-dessus de la ville</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000655/index.html'>L’Alcyone</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000633/index.html'>La constellation</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000657/index.html'>L’égarée</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000629/index.html'>Le reste est silence</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000630/index.html'>Le roi Cophetua</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000641/index.html'>Les figures de cire</a></td>
 </tr>
@@ -567,14 +525,13 @@
 
 <tr>
 <td class='auteur' valign="top" rowspan="1">Kapp, K. William</td>
-<td class='livre'><a href='livres/000686/index.html'>The Social Costs of Business Enterprise</a></td>
+<td class='livre'><a href='livres/000686/index.html'>The Social Costs of Business Enterprise</a> †</td>
 </tr>
 
 <tr>
 <td class='auteur' valign="top" rowspan="2">Kock, Paul de</td>
 <td class='livre'><a href='livres/000443/index.html'>L’enfant de ma femme</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000442/index.html'>Un mari perdu. L’homme à marier</a></td>
 </tr>
@@ -598,7 +555,6 @@
 <td class='auteur' valign='top' rowspan='2'>Laforgue, Jules</td>
 <td class='livre'><a href='livres/000388/index.html'>Les complaintes</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000627/index.html'>feuilles...</a></td>
 </tr>
@@ -627,7 +583,6 @@
 <td class='auteur' valign="top" rowspan="2">Liquier, Gabriel</td>
 <td class='livre'><a href='livres/000368/index.html'>Le trac d’un gendre</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000367/index.html'>Mon futur</a></td>
 </tr>
@@ -687,7 +642,7 @@
 
 <tr>
 <td class='auteur' valign="top" rowspan="1">Mansholt, Sicco</td>
-<td class='livre'><a href='livres/000684/index.html'>Mansholt Letter</a></td>
+<td class='livre'><a href='livres/000684/index.html'>Mansholt Letter</a> †</td>
 </tr>
 
 <tr>
@@ -698,7 +653,6 @@
 <td class='livre'><a href='livres/000400/index.html'>Manifeste du futurisme</a></td>
 </tr>
 
-
 <tr>
 <td class='auteur' rowspan='1' valign='top'>Margueritte, Paul</td>
 <td class='livre'><a href='livres/000415/index.html'>Simple histoire</a></td>
@@ -708,7 +662,6 @@
 <td class='auteur' rowspan='2' valign='top'>Margueritte, Victor</td>
 <td class='livre'><a href='livres/000396/index.html'>La garçonne</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000416/index.html'>Le soleil dans la geôle</a></td>
 </tr>
@@ -722,7 +675,6 @@
 <td class='auteur' valign='top'>Maupassant, Guy de</td>
 <td class='livre'><a href="livres/c00011/index.html">Œuvres complètes, Louis Conard</a></td>
 </tr>
-
 
 <tr>
 <td class='auteur' valign='top'>Michel, Louise</td>
@@ -753,7 +705,6 @@
 <td class='auteur' rowspan="2" valign="top">Moselly, Émile</td>
 <td class='livre'><a href='livres/000135/index.html'>Jean des Brebis</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000133/index.html'>Terres lorraines</a></td>
 </tr>
@@ -772,7 +723,6 @@
 <td class='auteur' rowspan="2" valign="top">Nau, John-Antoine</td>
 <td class='livre'><a href='livres/000156/index.html'>Force ennemie</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000563/index.html'>Lettres de Corse et de Bretagne</a></td>
 </tr>
@@ -781,11 +731,9 @@
 <td class='auteur' rowspan="3" valign="top">Nerval, Gérard de</td>
 <td class='livre'><a href='livres/000385/index.html'>Le rêve et la vie — Aurélia</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000386/index.html'>Les filles du feu</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000387/index.html'>La bohème galante</a></td>
 </tr>
@@ -795,36 +743,28 @@
 <td class='livre'><a href='livres/000399/index.html'>L’Afrique aux noirs</a></td>
 </tr>
 
-
 <tr>
 <td class='auteur' rowspan='8' valign='top'>Pawlowski, Gaston de</td>
 <td class='livre'><a href='livres/000524/index.html'>Histoires Montmartroises</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000328/index.html'>Inventions nouvelles et dernières nouveautés</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000345/index.html'>Ma voiture de course</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000327/index.html'>On se moque de nous</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000357/index.html'>Paysages animés</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000360/index.html'>Paysages chimériques</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000352/index.html'>Polochon</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000332/index.html'>Voyage au pays de la quatrième dimension</a></td>
 </tr>
@@ -857,7 +797,6 @@
 <td class='livre'><a href='livres/000403/index.html'>Le poème de la tranchée</a></td>
 </tr>
 
-
 <tr>
 <td class='auteur' valign='top'>Rameau, Jean</td>
 <td class='livre'><a href='livres/000375/index.html'>La vie et la mort</a></td>
@@ -877,7 +816,6 @@
 <td class='auteur' rowspan="2" valign='top'>Reclus, Élisée</td>
 <td class='livre'><a href='livres/000157/index.html'>A mon Frère le paysan</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000158/index.html'>L’évolution, la révolution et l’idéal anarchique</a></td>
 </tr>
@@ -888,7 +826,7 @@
 </tr>
 
 <tr>
-<td class='auteur valign='top''>Renard, Jules</td>
+<td class='auteur' valign='top'>Renard, Jules</td>
 <td class='livre'><a href='livres/000298/index.html'>L’écornifleur</a></td>
 </tr>
 
@@ -899,7 +837,6 @@
 
 <tr>
 <td class='auteur' rowspan="3" valign="top">Rolland, Romain</td>
-
 <td class='livre'><a href='livres/000414/index.html'>Au-dessus de la mêlée</a></td>
 </tr>
 <tr>
@@ -919,23 +856,18 @@
 <td class='auteur' rowspan="6" valign="top">Roussel, Raymond</td>
 <td class='livre'><a href='livres/000144/index.html'>Chiquenaude</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000148/index.html'>La doublure</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000145/index.html'>Impressions d’Afrique</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000139/index.html'>Locus Solus</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000151/index.html'>La vue</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000374/index.html'>Nouvelles impressions d’Afrique</a></td>
 </tr>
@@ -974,11 +906,9 @@
 <td class='auteur' rowspan="3" valign="top">Stendhal</td>
 <td class='livre'><a href='livres/000192/index.html'>La chartreuse de Parme</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000160/index.html'>Le rouge et le noir</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/c00006/index.html'>Romans et nouvelles</a></td>
 </tr>
@@ -1006,7 +936,6 @@
 <td class='auteur' rowspan="2" valign="top">Tailhade, Laurent</td>
 <td class='livre'><a href='livres/000378/index.html'>Discours civiques</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000379/index.html'>Discours pour la paix</a></td>
 </tr>
@@ -1020,6 +949,12 @@
 <td class='auteur' valign='top' rowspan='1'>Tharaud, Jérôme et Jean</td>
 <td class='livre'><a href='livres/000673/index.html'>Dingley : l’illustre écrivain</a></td>
 </tr>
+
+<tr>
+<td class='auteur' valign='top' rowspan='1'>The Ecologist</td>
+<td class='livre'><a href='livres/000687/index.html'>A Blueprint for Survival</a></td>
+</tr>
+
 
 <tr>
 <td class='auteur' valign='top' rowspan='2'>Theuriet, André</td>
@@ -1072,7 +1007,6 @@
 <td class='auteur' valign="top" rowspan='2'>Verlaine, Paul</td>
 <td class='livre'><a href='livres/c00007'>Œuvres complètes, Léon Vanier</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/c00008'>Œuvres posthumes, Albert Messein</a></td>
 </tr>
@@ -1089,26 +1023,25 @@
 
 <tr>
 <td class='auteur' valign='top'>Ward, Barbara, et Dubos, René</td>
-<td class='livre'><a href='livres/000685/index.html'>Only One Earth</a></td>
+<td class='livre'><a href='livres/000685/index.html'>Only One Earth</a> †</td>
 </tr>
 
 <tr>
 <td class='auteur' rowspan="3" valign="top">Zola, Émile</td>
 <td class='livre'><a href='livres/c00003/index.html'>Les Rougon-Macquart</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000171/index.html'>Lettre à M. Félix Faure</a></td>
 </tr>
-
 <tr>
 <td class='livre'><a href='livres/000172/index.html'>Lettre à la jeunesse</a></td>
 </tr>
 
 </table>
 
-<p>* Cette œuvre a été publiée avant 1927 et est donc libre de droits aux États-Unis, où cette réimpression a été réalisée et où elle est hébergée. Elle n’est pas libre de droit dans certains pays comme la France.</p>
+<p>* Cette œuvre a été publiée avant 1927 et est donc libre de droits aux États-Unis, où cette réimpression a été réalisée et où elle est hébergée. Elle n’est pas libre de droits dans certains pays comme la France.</p>
 
+<p>† Si vous êtes l’ayant-droit de ce texte, et vous fournissez une édition EPUB (gratuitement ou a un prix raisonable), merci de me prévenir afin que je retire cette réimpression.</p>
 
 <h3><a name="fidelite">Fidélité</a></h3>
 
