--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -952,7 +952,7 @@
 
 <tr>
 <td class='auteur' valign='top' rowspan='1'>The Ecologist</td>
-<td class='livre'><a href='livres/000687/index.html'>A Blueprint for Survival</a></td>
+<td class='livre'><a href='livres/000687/index.html'>A Blueprint for Survival</a> †</td>
 </tr>
 
 
@@ -1041,7 +1041,7 @@
 
 <p>* Cette œuvre a été publiée avant 1927 et est donc libre de droits aux États-Unis, où cette réimpression a été réalisée et où elle est hébergée. Elle n’est pas libre de droits dans certains pays comme la France.</p>
 
-<p>† Si vous êtes l’ayant-droit de ce texte, et vous fournissez une édition EPUB (gratuitement ou a un prix raisonable), merci de me prévenir afin que je retire cette réimpression.</p>
+<p>† Si vous êtes l’ayant-droit de ce texte, et vous fournissez une édition EPUB (gratuitement ou à un prix raisonable), merci de me prévenir afin que je retire cette réimpression.</p>
 
 <h3><a name="fidelite">Fidélité</a></h3>
 
