000688  2024-03-13    Jarrett — Perspectives on Convervation

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -519,6 +519,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Jarrett, Henry (editeur)</td>
+<td class='livre'><a href='livres/000688/index.html'>Perspectives on Conservation</a> †</td>
+</tr>
+
+<tr>
 <td class='auteur' valign='top'>Journet, Jean</td>
 <td class='livre'><a href='livres/000514/index.html'>L’ère de la femme</a></td>
 </tr>
