000689  2024-03-16    Ward et al — Who Speaks for Earth?

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -1032,6 +1032,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Ward, Barbara, <i>et al</i></td>
+<td class='livre'><a href='livres/000689/index.html'>Who Speaks for Earth</a> †</td>
+</tr>
+
+<tr>
 <td class='auteur' rowspan="3" valign="top">Zola, Émile</td>
 <td class='livre'><a href='livres/c00003/index.html'>Les Rougon-Macquart</a></td>
 </tr>
