000690  2024-03-19    Carco, Mac Orlan — Les mystères de la morgue

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -254,6 +254,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Carco, Francis et Mac Orlan, Pierre</td>
+<td class='livre'><a href='livres/000690/index.html'>Les mystères de la morgue</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign="top">Chamfort, Sébastien-Roch-Nicolas de</td>
 <td class='livre'><a href='livres/c00020/index.html'>Œuvres complètes, édition P. R. Auguis </a></td>
 </tr>
@@ -620,7 +625,7 @@
 <td class='livre'><a href='livres/000661/index.html'>La clique du café Brebis</a> *</td>
 </tr>
 <tr>
-<td class='livre'><a href='livres/000565/index.html'>La fin</a> *</td>
+<td class='livre'><a href='livres/000566/index.html'>La fin</a> *</td>
 </tr>
 <tr>
 <td class='livre'><a href='livres/000662/index.html'>L’île Torquate</a> *</td>
