000691  2024-03-27    Mac Orlan — Le Nègre Leonard et Maître Jean Mullin

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -255,7 +255,7 @@
 
 <tr>
 <td class='auteur' valign='top'>Carco, Francis et Mac Orlan, Pierre</td>
-<td class='livre'><a href='livres/000690/index.html'>Les mystères de la morgue</a></td>
+<td class='livre'><a href='livres/000690/index.html'>Les mystères de la morgue</a> *</td>
 </tr>
 
 <tr>
@@ -603,7 +603,7 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top' rowspan='15'>Mac Orlan, Pierre</td>
+<td class='auteur' valign='top' rowspan='16'>Mac Orlan, Pierre</td>
 <td class='livre'><a href='livres/000525/index.html'>A bord de l’Étoile Matutine</a> *</td>
 </tr>
 <tr>
@@ -632,6 +632,9 @@
 </tr>
 <tr>
 <td class='livre'><a href='livres/000663/index.html'>La maison du retour écœurant</a> *</td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000691/index.html'>Le Nègre Leonard et Maître Jean Mullin</a> *</td>
 </tr>
 <tr>
 <td class='livre'><a href='livres/000617/index.html'>Les poissons morts</a> *</td>
