00692   2024-06-23    NRC — Carbon Dioxide and Climate: A Scientific Assessment

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -733,6 +733,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>National Research Council</td>
+<td class='livre'><a href='livres/000692/index.html'>Carbon Dioxide and Climate: A Scientific Assessment</a></td>
+</tr>
+
+<tr>
 <td class='auteur' rowspan="2" valign="top">Nau, John-Antoine</td>
 <td class='livre'><a href='livres/000156/index.html'>Force ennemie</a></td>
 </tr>
