000693  2024-08-20    Roupnel — Le vieux Garain

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -871,6 +871,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Roupnel, Gaston</td>
+<td class='livre'><a href='livres/000693/index.html'>Le vieux Garain</a></td>
+</tr>
+
+<tr>
 <td class='auteur' rowspan="6" valign="top">Roussel, Raymond</td>
 <td class='livre'><a href='livres/000144/index.html'>Chiquenaude</a></td>
 </tr>
