--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -26,7 +26,7 @@
 <ul>
   <li style="margin:1em 0 0 0"><em>réimpressions :</em> les textes proposés sont ceux d’éditions existantes. Lorsqu’il existe plusieurs éditions, c’est généralement la dernière édition corrigée par l’auteur qui est retenue. De plus, sauf circonstance exceptionnelle, je ne fais que des réimpressions d’éditions pour lesquelles un fac-similé est accessible librement, à tous.</li>
   <li style="margin:1em 0 0 0"><em>fidélité :</em> l’édition originale est reproduite aussi fidèlement que possible. Les corrections de coquilles sont indiquées explicitement. En général, l’orthographe et la typographie ne sont pas modernisées.</li>
-  <li style="margin:1em 0 0 0"><em>source et epub :</em> les epubs sont réalisés à partir d’un fichier source.</li> 
+  <li style="margin:1em 0 0 0"><em>source et epub :</em> les epubs sont réalisés à partir d’un fichier source.</li>
   <li style="margin:1em 0 0 0"><em>bien commun :</em> les textes font partie du bien commun, et je considère que les fichiers source font aussi partie du bien commun. Je souhaite la diffusion la plus large des epubs, mais seulement en dehors des circuits commerciaux.</li>
 </ul>
 
@@ -422,7 +422,7 @@
 </tr>
 
 <tr>
-<td class='auteur' valign="top" rowspan="4">Gide, André</td>
+<td class='auteur' valign="top" rowspan="5">Gide, André</td>
 <td class='livre'><a href='livres/000642/index.html'>Isabelle</a></td>
 </tr>
 <tr>
@@ -433,6 +433,9 @@
 </tr>
 <tr>
 <td class='livre'><a href='livres/000645/index.html'>Souvenirs de la Cour d’assises</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000694/index.html'>Voyage au Congo</a></td>
 </tr>
 
 <tr>
