000695  2024-12-08    Gide — Le retour du Tchad

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -422,7 +422,7 @@
 </tr>
 
 <tr>
-<td class='auteur' valign="top" rowspan="5">Gide, André</td>
+<td class='auteur' valign="top" rowspan="6">Gide, André</td>
 <td class='livre'><a href='livres/000642/index.html'>Isabelle</a></td>
 </tr>
 <tr>
@@ -436,6 +436,9 @@
 </tr>
 <tr>
 <td class='livre'><a href='livres/000694/index.html'>Voyage au Congo</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000695/index.html'>Le retour de Tchad</a></td>
 </tr>
 
 <tr>
