000696  2024-12-10    Savorgnan de Brazza — Expédition sur les cours supérieurs de l’Ogôoué, de l’Alima et de la Licona

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -912,6 +912,12 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Savorgnan de Brazza, Pierre</td>
+<td class='livre'><a href='livres/000696/index.html'>Expédition sur les cours supérieurs de l’Ogôoué, de l’Alima et de la Licona</a></td>
+</tr>
+
+
+<tr>
 <td class='auteur' valign='top'>Schwob, Marcel</td>
 <td class='livre'><a href='livres/000163/index.html'>Le roi au masque d’or</a></td>
 </tr>
