--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -912,10 +912,12 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top'>Savorgnan de Brazza, Pierre</td>
+<td class='auteur' rowspan='2'valign='top'>Savorgnan de Brazza, Pierre</td>
 <td class='livre'><a href='livres/000696/index.html'>Expédition sur les cours supérieurs de l’Ogôoué, de l’Alima et de la Licona</a></td>
 </tr>
-
+<tr>
+  <td class='livre'><a href='livres/000697/index.html'>Exposé présenté par M. P. Savorgnan de Brazza</a></td>
+</tr>
 
 <tr>
 <td class='auteur' valign='top'>Schwob, Marcel</td>
