000698  2024-12-17    Mirbeau — La Grève des Électeurs

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -711,6 +711,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Mirbeau, Octave</td>
+<td class='livre'><a href='livres/000698/index.html'>La Grève des Électeurs</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign='top'>Molière</td>
 <td class='livre'><a href="livres/c00016/index.html">Œuvres complètes, édition Félix Lemaistre</a></td>
 </tr>
