--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -711,8 +711,11 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top'>Mirbeau, Octave</td>
+<td class='auteur' rowspan='2' valign='top'>Mirbeau, Octave</td>
 <td class='livre'><a href='livres/000698/index.html'>La Grève des Électeurs</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000699/index.html'>Prélude</a></td>
 </tr>
 
 <tr>
