000700  2025-02-14    Lefebvre — Quatre-vingt-neuf

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -581,6 +581,12 @@
 </tr>
 
 <tr>
+<td class='auteur' valign="top">Lefebvre, Georges</td>
+<td class='livre'><a href='livres/000700/index.html'>Quatre-vingt-neuf</a></td>
+</tr>
+
+
+<tr>
 <td class='auteur' valign="top">Lessig, Lawrence</td>
 <td class='livre'><a href='livres/000093/index.html'>Free Culture</a></td>
 </tr>
