000701  2025-02-08    Sauvy — Croissance zéro ?

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -921,6 +921,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Sauvy, Alfred</td>
+<td class='livre'><a href='livres/000701/index.html'>Croissance zéro ?</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign='top'>Savignon, André</td>
 <td class='livre'><a href='livres/000440/index.html'>Filles de la pluie</a></td>
 </tr>
