--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -582,7 +582,7 @@
 
 <tr>
 <td class='auteur' valign="top">Lefebvre, Georges</td>
-<td class='livre'><a href='livres/000700/index.html'>Quatre-vingt-neuf</a></td>
+<td class='livre'><a href='livres/000700/index.html'>Quatre-vingt-neuf</a> †</td>
 </tr>
 
 
@@ -922,7 +922,7 @@
 
 <tr>
 <td class='auteur' valign='top'>Sauvy, Alfred</td>
-<td class='livre'><a href='livres/000701/index.html'>Croissance zéro ?</a></td>
+<td class='livre'><a href='livres/000701/index.html'>Croissance zéro ?</a> †</td>
 </tr>
 
 <tr>
