000702  2025-02-18    Dyssord — Les dés sont jetés

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -345,18 +345,23 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top'>Descaves, Lucien</td>
-<td class='livre'><a href='livres/000628/index.html'>Sous-offs</a></td>
-</tr>
-
-<tr>
 <td class='auteur' valign='top'>Derennes, Charles</td>
 <td class='livre'><a href='livres/000392/index.html'>L’enfant dans l’herbe</a></td>
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Descaves, Lucien</td>
+<td class='livre'><a href='livres/000628/index.html'>Sous-offs</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign='top'>Duprat, François</td>
 <td class='livre'><a href='livres/000380/index.html'>Histoire de l’Imprimerie impériale de France</a></td>
+</tr>
+
+<tr>
+<td class='auteur' valign='top'>Dyssord, Jacques</td>
+<td class='livre'><a href='livres/000702/index.html'>Les dés sont jetés</a></td>
 </tr>
 
 <tr>
