000703  2025-03-05    Câmara — Spiral of violence

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -254,6 +254,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Câmara, Hélder</td>
+<td class='livre'><a href='livres/000703/index.html'>Spiral of violance</a> †</td>
+</tr>
+
+<tr>
 <td class='auteur' valign='top'>Carco, Francis et Mac Orlan, Pierre</td>
 <td class='livre'><a href='livres/000690/index.html'>Les mystères de la morgue</a> *</td>
 </tr>
