Séparation des titres en français et en anglais.

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -15,7 +15,7 @@
 <h2 style='text-align:center'>ÉFÉLÉ, réimprimeur la nuit</h2>
 
 <p>&nbsp;</p>
-<p style='text-align:center'><a href="#presentation">Présentation</a> — <a href="#catalogue">Catalogue</a> — <a href="#fidelite">Fidélité</a> — <a href="#fichier_source">Fichier source</a> — <a href="#bien_commun">Bien commun</a></p>
+<p style='text-align:center'><a href="#presentation">Présentation</a> — <a href="#catalogue_fr">Catalogue français</a> — <a href="#catalogue_en">Catalogue anglais</a> — <a href="#fidelite">Fidélité</a> — <a href="#fichier_source">Fichier source</a> — <a href="#bien_commun">Bien commun</a></p>
 
 <p style='text-align:center'><a href="feed.xml"><img src="feed-icon-14x14.png" alt="Fil RSS"/> Nouveautés et mises à jour</a></p>
 
@@ -34,7 +34,7 @@
 
 <p>Tous vos commentaires (en particulier les erreurs dans les textes) sont bienvenus. Merci de les envoyer à <a href="mailto:livres@efele.net">livres@efele.net</a>.</p>
 
-<h3><a name="catalogue">Catalogue</a></h3>
+<h3><a name="catalogue_fr">Catalogue français</a></h3>
 
 <p>Le site <a href='http://noslivres.net'>noslivres.net</a> intègre les livres en français du catalogue ÉFÉLÉ ainsi que les catalogues d’autres éditeurs, et permet des tris et recherches.</p>
 
@@ -221,16 +221,6 @@
 </tr>
 
 <tr>
-<td class='auteur' rowspan="1" valign="top">Bookchin, Murray</td>
-<td class='livre'><a href='livres/000682/index.html'>Our Synthetic Environment</a> †</td>
-</tr>
-
-<tr>
-<td class='auteur' rowspan="1" valign="top">Borlaug, Norman</td>
-<td class='livre'><a href='livres/000683/index.html'>Mankind and Civilization at Another Crossroad</a> †</td>
-</tr>
-
-<tr>
 <td class='auteur' rowspan="2" valign="top">Bourgeois, Léon</td>
 <td class='livre'><a href='livres/000372/index.html'>Les applications de la solidarité sociale</a></td>
 </tr>
@@ -251,11 +241,6 @@
 <tr>
 <td class='auteur' valign='top'>Buchon, Max</td>
 <td class='livre'><a href='livres/000427/index.html'>Scènes franc-comtoises</a></td>
-</tr>
-
-<tr>
-<td class='auteur' valign='top'>Câmara, Hélder</td>
-<td class='livre'><a href='livres/000703/index.html'>Spiral of violance</a> †</td>
 </tr>
 
 <tr>
@@ -316,11 +301,6 @@
 <tr>
 <td class='auteur' valign='top'>Dabit, Eugène</td>
 <td class='livre'><a href='livres/000448/index.html'>L’Hôtel du Nord</a></td>
-</tr>
-
-<tr>
-<td class='auteur' valign='top'>Darwin, Charles</td>
-<td class='livre'><a href='livres/000177/index.html'>Journal of Researches</a></td>
 </tr>
 
 <tr>
@@ -471,11 +451,6 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top'>Goldman, Emma</td>
-<td class='livre'><a href='livres/000196/index.html'>Anarchism and other essays</a></td>
-</tr>
-
-<tr>
 <td class='auteur' valign='top'>Holbach, , baron d’</td>
 <td class='livre'><a href='livres/000675/index.html'>Théologie portative</a></td>
 </tr>
@@ -540,18 +515,8 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top'>Jarrett, Henry (editeur)</td>
-<td class='livre'><a href='livres/000688/index.html'>Perspectives on Conservation</a> †</td>
-</tr>
-
-<tr>
 <td class='auteur' valign='top'>Journet, Jean</td>
 <td class='livre'><a href='livres/000514/index.html'>L’ère de la femme</a></td>
-</tr>
-
-<tr>
-<td class='auteur' valign="top" rowspan="1">Kapp, K. William</td>
-<td class='livre'><a href='livres/000686/index.html'>The Social Costs of Business Enterprise</a> †</td>
 </tr>
 
 <tr>
@@ -593,12 +558,6 @@
 <tr>
 <td class='auteur' valign="top">Lefebvre, Georges</td>
 <td class='livre'><a href='livres/000700/index.html'>Quatre-vingt-neuf</a> †</td>
-</tr>
-
-
-<tr>
-<td class='auteur' valign="top">Lessig, Lawrence</td>
-<td class='livre'><a href='livres/000093/index.html'>Free Culture</a></td>
 </tr>
 
 <tr>
@@ -672,12 +631,6 @@
 </tr>
 <tr>
 <td class='livre'><a href='livres/000668/index.html'>La Vénus internationale</a> *</td>
-</tr>
-
-
-<tr>
-<td class='auteur' valign="top" rowspan="1">Mansholt, Sicco</td>
-<td class='livre'><a href='livres/000684/index.html'>Mansholt Letter</a> †</td>
 </tr>
 
 <tr>
@@ -760,11 +713,6 @@
 <tr>
 <td class='auteur' valign='top'>Murger, Henry</td>
 <td class='livre'><a href='livres/000425/index.html'>Les buveurs d’eau</a></td>
-</tr>
-
-<tr>
-<td class='auteur' valign='top'>National Research Council</td>
-<td class='livre'><a href='livres/000692/index.html'>Carbon Dioxide and Climate: A Scientific Assessment</a></td>
 </tr>
 
 <tr>
@@ -1017,12 +965,6 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top' rowspan='1'>The Ecologist</td>
-<td class='livre'><a href='livres/000687/index.html'>A Blueprint for Survival</a> †</td>
-</tr>
-
-
-<tr>
 <td class='auteur' valign='top' rowspan='2'>Theuriet, André</td>
 <td class='livre'><a href='livres/000658/index.html'>Contes pour les soirs d’hiver</a></td>
 </tr>
@@ -1088,16 +1030,6 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top'>Ward, Barbara, et Dubos, René</td>
-<td class='livre'><a href='livres/000685/index.html'>Only One Earth</a> †</td>
-</tr>
-
-<tr>
-<td class='auteur' valign='top'>Ward, Barbara, <i>et al</i></td>
-<td class='livre'><a href='livres/000689/index.html'>Who Speaks for Earth</a> †</td>
-</tr>
-
-<tr>
 <td class='auteur' rowspan="3" valign="top">Zola, Émile</td>
 <td class='livre'><a href='livres/c00003/index.html'>Les Rougon-Macquart</a></td>
 </tr>
@@ -1111,6 +1043,78 @@
 </table>
 
 <p>* Cette œuvre a été publiée avant 1927 et est donc libre de droits aux États-Unis, où cette réimpression a été réalisée et où elle est hébergée. Elle n’est pas libre de droits dans certains pays comme la France.</p>
+
+<h3><a name="catalogue_en">Catalogue anglais</a></h3>
+
+<table style='borders:0;' cellpadding='2'>
+
+<tr>
+<td class='auteur' rowspan="1" valign="top">Bookchin, Murray</td>
+<td class='livre'><a href='livres/000682/index.html'>Our Synthetic Environment</a> †</td>
+</tr>
+
+<tr>
+<td class='auteur' rowspan="1" valign="top">Borlaug, Norman</td>
+<td class='livre'><a href='livres/000683/index.html'>Mankind and Civilization at Another Crossroad</a> †</td>
+</tr>
+
+<tr>
+<td class='auteur' valign='top'>Câmara, Hélder</td>
+<td class='livre'><a href='livres/000703/index.html'>Spiral of violance</a> †</td>
+</tr>
+
+<tr>
+<td class='auteur' valign='top'>Darwin, Charles</td>
+<td class='livre'><a href='livres/000177/index.html'>Journal of Researches</a></td>
+</tr>
+
+<tr>
+<td class='auteur' valign='top'>Goldman, Emma</td>
+<td class='livre'><a href='livres/000196/index.html'>Anarchism and other essays</a></td>
+</tr>
+
+<tr>
+<td class='auteur' valign='top'>Jarrett, Henry (editeur)</td>
+<td class='livre'><a href='livres/000688/index.html'>Perspectives on Conservation</a> †</td>
+</tr>
+
+<tr>
+<td class='auteur' valign="top" rowspan="1">Kapp, K. William</td>
+<td class='livre'><a href='livres/000686/index.html'>The Social Costs of Business Enterprise</a> †</td>
+</tr>
+
+<tr>
+<td class='auteur' valign="top">Lessig, Lawrence</td>
+<td class='livre'><a href='livres/000093/index.html'>Free Culture</a></td>
+</tr>
+
+<tr>
+<td class='auteur' valign="top" rowspan="1">Mansholt, Sicco</td>
+<td class='livre'><a href='livres/000684/index.html'>Mansholt Letter</a> †</td>
+</tr>
+
+<tr>
+<td class='auteur' valign='top'>National Research Council</td>
+<td class='livre'><a href='livres/000692/index.html'>Carbon Dioxide and Climate: A Scientific Assessment</a></td>
+</tr>
+
+<tr>
+<td class='auteur' valign='top' rowspan='1'>The Ecologist</td>
+<td class='livre'><a href='livres/000687/index.html'>A Blueprint for Survival</a> †</td>
+</tr>
+
+<tr>
+<td class='auteur' valign='top'>Ward, Barbara, et Dubos, René</td>
+<td class='livre'><a href='livres/000685/index.html'>Only One Earth</a> †</td>
+</tr>
+
+<tr>
+<td class='auteur' valign='top'>Ward, Barbara, <i>et al</i></td>
+<td class='livre'><a href='livres/000689/index.html'>Who Speaks for Earth</a> †</td>
+</tr>
+
+</table>
+
 
 <p>† Si vous êtes l’ayant-droit de ce texte, et si vous fournissez une édition EPUB (gratuitement ou à un prix raisonnable), merci de me prévenir afin que je retire cette réimpression.</p>
 
