000704 Gorz — Ecologie et politique (Michel Bosquet)

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -451,6 +451,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Gorz, André</td>
+<td class='livre'><a href='livres/000704/index.html'>Écologie et politique (Michel Bosquet) †</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign='top'>Holbach, , baron d’</td>
 <td class='livre'><a href='livres/000675/index.html'>Théologie portative</a></td>
 </tr>
