000705  2025-06-09    Gorz — Ecologie et liberté

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -451,8 +451,12 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top'>Gorz, André</td>
+<td class='auteur' valign='top' rowspan="2">Gorz, André</td>
 <td class='livre'><a href='livres/000704/index.html'>Écologie et politique (Michel Bosquet) †</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000705/index.html'>Écologie et liberté (Michel Bosquet) †</a></td>
 </tr>
 
 <tr>
