000706 Rosenthal, Munson — President Kissinger 000707 Gorz — Misères du présent, richesse du possible

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -451,12 +451,16 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top' rowspan="2">Gorz, André</td>
+<td class='auteur' valign='top' rowspan="3">Gorz, André</td>
 <td class='livre'><a href='livres/000704/index.html'>Écologie et politique (Michel Bosquet) †</a></td>
 </tr>
 
 <tr>
 <td class='livre'><a href='livres/000705/index.html'>Écologie et liberté (Michel Bosquet) †</a></td>
+</tr>
+
+<tr>
+<td class='livre'><a href='livres/000707/index.html'>Misères du présent, richesse du possible †</a></td>
 </tr>
 
 <tr>
@@ -1110,6 +1114,11 @@
 <tr>
 <td class='auteur' valign='top' rowspan='1'>The Ecologist</td>
 <td class='livre'><a href='livres/000687/index.html'>A Blueprint for Survival</a> †</td>
+</tr>
+
+<tr>
+<td class='auteur' valign='top'>Rosenthal, Monroe, et Munson, Donald</td>
+<td class='livre'><a href='livres/000706/index.html'>President Kissinger</a> †</td>
 </tr>
 
 <tr>
