000708 Jean — Parmi les hommes

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -528,6 +528,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Jean, Lucien</td>
+<td class='livre'><a href='livres/000708/index.html'>Parmi les hommes</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign='top'>Journet, Jean</td>
 <td class='livre'><a href='livres/000514/index.html'>L’ère de la femme</a></td>
 </tr>
