000710  2025-07-14    Girodias — Une journée sur la terre / Les jardins d’Éros

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -446,6 +446,18 @@
 </tr>
 
 <tr>
+<td class='auteur' valign="top" rowspan="3">Girodias, Maurice</td>
+<td class='livre'><a href='livres/000709/index.html'>Une journée sur la terre, I L’arrivée</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000710/index.html'>Une journée sur la terre, II Les jardins d’Éros</a></td>
+</tr>
+<tr>
+<td class='livre'><a href='livres/000711/index.html'>L’affaire Kissinger</a></td>
+</tr>
+
+
+<tr>
 <td class='auteur' valign='top'>Gobineau, Arthur</td>
 <td class='livre'><a href='livres/000001/index.html'>Les Pléiades</a></td>
 </tr>
