000712 Graffigny — Lettres d’une Peruvienne

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -476,6 +476,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Graffigny, Françoise de</td>
+<td class='livre'><a href='livres/000712/index.html'>Lettres d’une Peruvienne</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign='top'>Holbach, , baron d’</td>
 <td class='livre'><a href='livres/000675/index.html'>Théologie portative</a></td>
 </tr>
