--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -476,7 +476,11 @@
 </tr>
 
 <tr>
-<td class='auteur' valign='top'>Graffigny, Françoise de</td>
+<td class='auteur' valign='top' rowspan="2">Graffigny, Françoise de</td>
+<td class='livre'><a href='livres/000713/index.html'>Cénie</a></td>
+</tr>
+
+<tr>
 <td class='livre'><a href='livres/000712/index.html'>Lettres d’une Peruvienne</a></td>
 </tr>
 
