000714 Guattari — Les trois écologies

--- a/livres.publies/index.html
+++ b/livres.publies/index.html
@@ -485,6 +485,11 @@
 </tr>
 
 <tr>
+<td class='auteur' valign='top'>Guattari, Félix</td>
+<td class='livre'><a href='livres/000714/index.html'>Les trois écologies †</a></td>
+</tr>
+
+<tr>
 <td class='auteur' valign='top'>Holbach, , baron d’</td>
 <td class='livre'><a href='livres/000675/index.html'>Théologie portative</a></td>
 </tr>
